<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TAGWriter</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
	<string name="id_hint">ID</string>
	<string name="name_hint">Name</string>
    <string name="description_hint">Description</string>
    <string name="url_hint">URL (Retail only)</string>
    <string name="hash_hint">Hash (Retail only)</string>
</resources>