<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/bt_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Scan QR Code" />

        <EditText
            android:id="@+id/txt_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/id_hint" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name_hint" />

        <EditText
            android:id="@+id/txt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/description_hint" />

        <EditText
            android:id="@+id/txt_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/url_hint" 
            android:inputType="textUri"/>
        
        <EditText
            android:id="@+id/txt_hash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hash_hint" />

        <Button
            android:id="@+id/bt_write"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Write TAG" />

        <Button
            android:id="@+id/bt_stop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Stop"
            android:visibility="gone" />
        
    </LinearLayout>

</ScrollView>